[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/fonts/OCRAEXT.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/user_interface/TextureButtons/button_bitmask_1.png" type="BitMap" id=2]
[ext_resource path="res://assets/images/user_interface/TextureButtons/start_button_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/images/user_interface/TextureButtons/start_button_hovered.png" type="Texture" id=4]
[ext_resource path="res://assets/images/user_interface/TextureButtons/start_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/images/user_interface/TextureButtons/exit_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/images/user_interface/TextureButtons/exit_button_hovered.png" type="Texture" id=7]
[ext_resource path="res://assets/images/user_interface/TextureButtons/exit_button_normal.png" type="Texture" id=8]
[ext_resource path="res://user_interface/MainMenu/main_menu.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/OCRAEXT.tres" type="DynamicFont" id=10]

[sub_resource type="DynamicFont" id=1]
size = 82
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 1.4
loop = true

[sub_resource type="DynamicFont" id=3]
size = 23
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 128.0
margin_right = 320.0
margin_bottom = 212.0
rect_min_size = Vector2( 640, 84 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.286275, 0.294118, 0.301961, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Goner gunner"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -76.0
margin_right = 192.0
margin_bottom = -39.0
rect_min_size = Vector2( 384, 0 )
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "fly and boom!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -360.0
margin_right = 152.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="NinePatchRect"]
margin_left = 32.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_click_mask = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = 96.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_click_mask = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -160.0
margin_right = 92.0
margin_bottom = -117.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_right = 180.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "SETTINGS"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 44.0
margin_right = 180.0
margin_bottom = 84.0
focus_mode = 0
enabled_focus_mode = 0
text = "HELP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 88.0
margin_right = 180.0
margin_bottom = 128.0
focus_mode = 0
enabled_focus_mode = 0
text = "ABOUT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/NinePatchRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.392157, 0.415686, 0.435294, 0.760784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 224.0
margin_right = 100.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "are you
sure you want 
to quit?"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="CanvasLayer/NinePatchRect"]
margin_left = 424.0
margin_top = 320.0
margin_right = 499.0
margin_bottom = 363.0
text = "YES"

[node name="No" type="Button" parent="CanvasLayer/NinePatchRect"]
margin_left = 520.0
margin_top = 320.0
margin_right = 595.0
margin_bottom = 363.0
text = "NO"

[node name="Popup" type="Popup" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -210.0
margin_right = 219.0
margin_bottom = 210.0
rect_min_size = Vector2( 438, 420 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -210.0
margin_right = 219.0
margin_bottom = 210.0
color = Color( 0.145098, 0.14902, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="VBoxContainer" parent="CanvasLayer/Popup/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Popup/TabContainer/About"]
margin_right = 430.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 344 )
scroll_vertical = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Popup/TabContainer/About/ScrollContainer"]
margin_right = 408.0
margin_bottom = 1000.0

[node name="License" type="Label" parent="CanvasLayer/Popup/TabContainer/About/ScrollContainer/VBoxContainer"]
margin_right = 408.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "LICENSE:"

[node name="Label" type="Label" parent="CanvasLayer/Popup/TabContainer/About/ScrollContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 408.0
margin_bottom = 847.0
rect_min_size = Vector2( 408, 0 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2022 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2022 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

-- Godot Engine
<https://godotengine.org>"
autowrap = true

[node name="Notice" type="Label" parent="CanvasLayer/Popup/TabContainer/About/ScrollContainer/VBoxContainer"]
margin_top = 851.0
margin_right = 408.0
margin_bottom = 959.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "
ABOUT THIS GAME:
"

[node name="Label2" type="Label" parent="CanvasLayer/Popup/TabContainer/About/ScrollContainer/VBoxContainer"]
margin_top = 963.0
margin_right = 408.0
margin_bottom = 1000.0
rect_min_size = Vector2( 408, 0 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "This game is currently under development..."
autowrap = true

[node name="Credits" type="VBoxContainer" parent="CanvasLayer/Popup/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Popup/TabContainer/Credits"]
margin_right = 430.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 344 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Popup/TabContainer/Credits/ScrollContainer"]
margin_right = 360.0
margin_bottom = 841.0

[node name="Label" type="Label" parent="CanvasLayer/Popup/TabContainer/Credits/ScrollContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Programmer: YstyphnCodes"

[node name="Label2" type="Label" parent="CanvasLayer/Popup/TabContainer/Credits/ScrollContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 360.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Arts: YstyphnCodes"

[node name="Label3" type="Label" parent="CanvasLayer/Popup/TabContainer/Credits/ScrollContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 360.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Sounds: YstyphnCodes"

[node name="Label4" type="Label" parent="CanvasLayer/Popup/TabContainer/Credits/ScrollContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 360.0
margin_bottom = 841.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "























There is nothing else to show here >__<"
autowrap = true

[node name="Button" type="Button" parent="CanvasLayer/Popup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -53.5
margin_top = -40.0
margin_right = 53.5
rect_min_size = Vector2( 80, 0 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -34.0
margin_bottom = -33.0
rect_min_size = Vector2( 168, 34 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
align = 2
valign = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="NinePatchRect/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="NinePatchRect/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="CanvasLayer/NinePatchRect/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="CanvasLayer/NinePatchRect/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="CanvasLayer/Popup/Button" to="." method="_on_popup_close_pressed"]
